YWS-392 Fixing gap in Project team block

--- a/components/CaseStudiesCommon/ProjectIdea/styles.module.scss
+++ b/components/CaseStudiesCommon/ProjectIdea/styles.module.scss
@@ -814,6 +814,19 @@
     top: 53%;
     left: 64.5%;
 
+    @include quad-hd {
+      left: 69.2%;
+    }
+
+    @include full-hd {
+      top: 53%;
+      left: 67.1%;
+    }
+
+    @include macbook-thirteen {
+      left: 64.5%;
+    }
+
     @include tablet {
       top: 40%;
       left: 60.8%;
